Ajustes para adequar as novas rotas

--- a/trab/templates/compra/cadastrar_compra.html
+++ b/trab/templates/compra/cadastrar_compra.html
@@ -63,7 +63,7 @@
 
         <div class="mt-4">
             <div class="d-flex justify-content-center gap-3">
-                <a href="{{ url_for('compras') }}" class="btn btn-secondary">Cancelar</a>
+                <a href="{{ url_for('compras_bp.compras') }}" class="btn btn-secondary">Cancelar</a>
                 <button type="submit" class="btn btn-success">Registrar</button>
             </div>
         </div>
