--- a/trab/templates/index.html
+++ b/trab/templates/index.html
@@ -14,7 +14,7 @@
                     <i class="bi bi-box-seam text-primary" style="font-size: 2.5rem;"></i>
                     <h5 class="card-title mt-3">Produtos</h5>
                     <p class="card-text">Cadastre e gerencie produtos</p>
-                    <a href="{{ url_for('produtos') }}" class="btn btn-outline-primary stretched-link">Acessar</a>
+                    <a href="{{ url_for('produtos_bp.produtos') }}" class="btn btn-outline-primary stretched-link">Acessar</a>
                 </div>
             </div>
         </div>
@@ -25,7 +25,7 @@
                     <i class="bi bi-people text-primary" style="font-size: 2.5rem;"></i>
                     <h5 class="card-title mt-3">Clientes</h5>
                     <p class="card-text">Gerencie seus clientes</p>
-                    <a href="{{ url_for('clientes') }}" class="btn btn-outline-primary stretched-link">Acessar</a>
+                    <a href="{{ url_for('clientes_bp.clientes') }}" class="btn btn-outline-primary stretched-link">Acessar</a>
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
                     <i class="bi bi-truck text-primary" style="font-size: 2.5rem;"></i>
                     <h5 class="card-title mt-3">Fornecedores</h5>
                     <p class="card-text">Gerencie seus parceiros</p>
-                    <a href="{{ url_for('fornecedores') }}" class="btn btn-outline-primary stretched-link">Acessar</a>
+                    <a href="{{ url_for('fornecedores_bp.fornecedores') }}" class="btn btn-outline-primary stretched-link">Acessar</a>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
                     <i class="bi bi-cart-plus text-primary" style="font-size: 2.5rem;"></i>
                     <h5 class="card-title mt-3">Compras</h5>
                     <p class="card-text">Registre novas aquisições de produtos</p>
-                    <a href="{{ url_for('compras') }}" class="btn btn-outline-primary stretched-link">Acessar</a>
+                    <a href="{{ url_for('compras_bp.compras') }}" class="btn btn-outline-primary stretched-link">Acessar</a>
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
                     <i class="bi bi-currency-dollar text-primary" style="font-size: 2.5rem;"></i>
                     <h5 class="card-title mt-3">Vendas</h5>
                     <p class="card-text">Registre vendas à vista ou a prazo</p>
-                    <a href="{{ url_for('vendas') }}" class="btn btn-outline-primary stretched-link">Acessar</a>
+                    <a href="{{ url_for('vendas_bp.vendas') }}" class="btn btn-outline-primary stretched-link">Acessar</a>
                 </div>
             </div>
         </div>
