--- a/trab/templates/venda/cadastrar_venda.html
+++ b/trab/templates/venda/cadastrar_venda.html
@@ -63,7 +63,7 @@
             <div class="d-flex justify-content-between align-items-center">
                 <h5>Total: <span id="total-venda">R$ 0,00</span></h5>
                 <div>
-                    <a href="{{ url_for('vendas') }}" class="btn btn-secondary">Cancelar</a>
+                    <a href="{{ url_for('vendas_bp.vendas') }}" class="btn btn-secondary">Cancelar</a>
                     <button type="submit" class="btn btn-success">Registrar</button>
                 </div>
             </div>
