--- a/trab/templates/cliente/clientes.html
+++ b/trab/templates/cliente/clientes.html
@@ -3,7 +3,7 @@
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2>Clientes</h2>
-        <a href="{{ url_for('cadastrar_cliente') }}" class="btn btn-primary">
+        <a href="{{ url_for('clientes_bp.cadastrar_cliente') }}" class="btn btn-primary">
             <i class="bi bi-plus-circle"></i> Novo Cliente
         </a>
     </div>
@@ -29,7 +29,7 @@
                     <td>{{ cliente.estado if cliente.estado else '-' }}</td>
                     <td>{{ cliente.status }}</td>
                     <td>
-                        <a href="{{ url_for('editar_cliente', cliente_id=cliente.id) }}" class="btn btn-sm btn-primary me-2">Editar</a>
+                        <a href="{{ url_for('clientes_bp.editar_cliente', cliente_id=cliente.id) }}" class="btn btn-sm btn-primary me-2">Editar</a>
                     </td>
                 </tr>
                 {% else %}
