--- a/trab/templates/fornecedor/cadastrar_fornecedor.html
+++ b/trab/templates/fornecedor/cadastrar_fornecedor.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="d-flex justify-content-center gap-3">
-            <a href="{{ url_for('fornecedores') }}" class="btn btn-secondary">Cancelar</a>
+            <a href="{{ url_for('fornecedores_bp.fornecedores') }}" class="btn btn-secondary">Cancelar</a>
             <button type="submit" class="btn btn-success">Cadastrar</button>
         </div>
     </form>
