--- a/trab/templates/fornecedor/fornecedores.html
+++ b/trab/templates/fornecedor/fornecedores.html
@@ -3,7 +3,7 @@
 <div class="container my-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2>Fornecedores</h2>
-        <a href="{{ url_for('cadastrar_fornecedor') }}" class="btn btn-primary">
+        <a href="{{ url_for('fornecedores_bp.cadastrar_fornecedor') }}" class="btn btn-primary">
             <i class="bi bi-plus-circle"></i> Novo Fornecedor
         </a>
     </div>
@@ -29,7 +29,7 @@
                     <td>{{ fornecedor.estado }}</td>
                     <td>{{ fornecedor.status }}</td>
                     <td>
-                        <a href="{{ url_for('editar_fornecedor', fornecedor_id=fornecedor.id) }}" class="btn btn-sm btn-primary me-2">Editar</a>
+                        <a href="{{ url_for('fornecedores_bp.editar_fornecedor', fornecedor_id=fornecedor.id) }}" class="btn btn-sm btn-primary me-2">Editar</a>
                     </td>
                 </tr>
                 {% else %}
