--- a/trab/templates/layout.html
+++ b/trab/templates/layout.html
@@ -25,22 +25,22 @@
             <div class="collapse navbar-collapse" id="navbarContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href={{url_for('produtos')}}>Produtos</a>
+                        <a class="nav-link" href={{url_for('produtos_bp.produtos')}}>Produtos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href={{url_for('clientes')}}>Clientes</a>
+                        <a class="nav-link" href={{url_for('clientes_bp.clientes')}}>Clientes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href={{url_for('fornecedores')}}>Fornecedores</a>
+                        <a class="nav-link" href={{url_for('fornecedores_bp.fornecedores')}}>Fornecedores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href={{url_for('compras')}}>Compras</a>
+                        <a class="nav-link" href={{url_for('compras_bp.compras')}}>Compras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href={{url_for('vendas')}}>Vendas</a>
+                        <a class="nav-link" href={{url_for('vendas_bp.vendas')}}>Vendas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('index')}}">Relatórios</a>
+                        <a class="nav-link" href="{{url_for('base_bp.index')}}">Relatórios</a>
                     </li>
                 </ul>
             </div>
