--- a/trab/templates/produto/cadastrar_produto.html
+++ b/trab/templates/produto/cadastrar_produto.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="d-flex justify-content-center gap-3">
-            <a href="{{ url_for('produtos') }}" class="btn btn-secondary">Cancelar</a>
+            <a href="{{ url_for('produtos_bp.produtos') }}" class="btn btn-secondary">Cancelar</a>
             <button type="submit" class="btn btn-success">Cadastrar</button>
         </div>
     </form>
