--- a/trab/templates/produto/produtos.html
+++ b/trab/templates/produto/produtos.html
@@ -3,7 +3,7 @@
 <div class="container my-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2 class="mb-4 text-center">Produtos</h2>
-        <a href="{{ url_for('cadastrar_produto') }}" class="btn btn-primary">
+        <a href="{{ url_for('produtos_bp.cadastrar_produto') }}" class="btn btn-primary">
             <i class="bi bi-plus-circle"></i> Novo Produto
         </a>
     </div>
@@ -42,7 +42,7 @@
                 </div>
                 <div class="card-footer bg-transparent">
                     <div class="d-flex justify-content-end">
-                        <a href="{{ url_for('editar_produto', produto_id=produto.id) }}" 
+                        <a href="{{ url_for('produtos_bp.editar_produto', produto_id=produto.id) }}" 
                            class="btn btn-sm btn-outline-primary me-2">
                             <i class="bi bi-pencil"></i> Editar
                         </a>
