--- a/trab/templates/cliente/clientes.html
+++ b/trab/templates/cliente/clientes.html
@@ -39,7 +39,7 @@
                 </tr>
                 {% else %}
                 <tr>
-                    <td colspan="6" class="text-center">Nenhum cliente ativo encontrado.</td>
+                    <td colspan="6" class="text-center">Nenhum cliente ativo cadastrado.</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -76,7 +76,7 @@
                 </tr>
                 {% else %}
                 <tr>
-                    <td colspan="6" class="text-center">Nenhum cliente inativo encontrado.</td>
+                    <td colspan="6" class="text-center">Nenhum cliente inativo cadastrado.</td>
                 </tr>
                 {% endfor %}
             </tbody>
