--- a/trab/templates/fornecedor/cadastrar_fornecedor.html
+++ b/trab/templates/fornecedor/cadastrar_fornecedor.html
@@ -20,10 +20,12 @@
             {{ form.estado.label(class="form-label") }}
             {{ form.estado(class="form-control") }}
         </div>
-        <div class="mb-3">
-            {{ form.status.label(class="form-label") }}
-            {{ form.status(class="form-control") }}
-        </div>
+        {% if titulo == 'Editar Fornecedor' %}
+            <div class="mb-3">
+                {{ form.status.label(class="form-label") }}
+                {{ form.status(class="form-control") }}
+            </div>
+        {% endif %}
 
         <div class="d-flex justify-content-center gap-3">
             <a href="{{ url_for('fornecedores_bp.fornecedores') }}" class="btn btn-secondary">Cancelar</a>
