--- a/trab/templates/layout.html
+++ b/trab/templates/layout.html
@@ -23,7 +23,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center" style="font-weight: 500;">
                     <li class="nav-item">
                         <a class="nav-link" href={{url_for('produtos_bp.produtos')}}>Produtos</a>
                     </li>
@@ -42,6 +42,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{url_for('base_bp.index')}}">Relatórios</a>
                     </li>
+
+                    <div class="d-flex align-items-center gap-3">
+                        <div class="bg-primary-subtle text-primary-emphasis p-2 rounded d-flex align-items-center gap-2">
+                            <i class="bi bi-building-check text-primary fs-4"></i>
+                            <div style="font-weight: 500;">R$ 0,00</div>
+                        </div>
+                        <div class="bg-primary-subtle text-primary-emphasis p-2 rounded d-flex align-items-center gap-2">
+                            <i class="bi bi-cash-coin text-primary fs-4"></i>
+                            <div style="font-weight: 500;">R$ 0,00</div>
+                        </div>
+                    </div>
                 </ul>
             </div>
         </div>
