--- a/trab/templates/layout.html
+++ b/trab/templates/layout.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href={{url_for('vendas_bp.vendas')}}>Vendas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('base_bp.index')}}">Relatórios</a>
+                        <a class="nav-link" href="{{url_for('patrimonio_bp.bens')}}">Patrimônio</a>
                     </li>
 
                     <div class="d-flex align-items-center gap-3">
